--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<TITLE>主机屋专业的IDC提供商——主机屋(www.zhujiwu.com)</TITLE>
+<TITLE>DFCD</TITLE>
 
 </HEAD>
 <BODY>
